# AI-Onboarding-Telegram-Bot

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py  state.py
app/crud/: chat.py  quiz.py  user.py
app/data/: qdrant_helper.py  questions.py
app/keyboards/: keyboards.py
app/models/: db_helper.py  models.py
app/routers/: bot_router.py  onboarding.py  qa.py  quiz.py
migrations/: env.py
migrations/versions/: 4bae3fbc3ca6_quiz.py  9da310d93022_tables_with_mapped_1.py  d646c904478e_add_department_to_user.py
