[project]
name = "onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=2.1.0",
    "qdrant-client>=1.15.1",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "pdfplumber>=0.11.7",
    "pypdf>=6.1.1",
]
